fix test compile